fix blockquote scrollbar

--- a/pelican/themes/notmyidea/static/css/main.css
+++ b/pelican/themes/notmyidea/static/css/main.css
@@ -132,7 +132,8 @@ blockquote {
   margin: 1.5em 10px;
   padding: 0.5em 10px;
   quotes: "\201C""\201D""\2018""\2019";
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 blockquote:before {
   color: #ccc;
